--- a/templates/showMyData.html
+++ b/templates/showMyData.html
@@ -28,7 +28,7 @@
             <tr>
                 <td>{{ product.0 }}</td>
                 <td class="text-center">{{ product.1 }}</td>
-                <td class="text-center">{{ product.2 }}</td>
+                <td class="text-center"><img class="img img-thumbnail" src="{{ product.2 }}"></td>
             </tr>
         {% endfor %}
     </table>
