--- a/templates/rolemodel.html
+++ b/templates/rolemodel.html
@@ -11,6 +11,9 @@
         </div>
 
         <div class="col-lg-9">
+            <div class="mt-4 p-2 text-white rounded" style="background-color: #FF6699">
+        <h1 class="text-center"><b>Role Model</b></h1></div><br>
+
             <div class="mt-1 p-4 text-white rounded" style="background-color: #51C2D5">
                 <h5><b>Eske Willerslev </b></h5>
                 <p class="alert alert-info">เป็นนักวิทยาศาสตร์ ผู้เชี่ยวชาญด้าน DNA พันธุกรรมและวิวัฒนาการ เป็นผู้อำนวยการศูนย์ GeoGenetics
