--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
         <!-- The slideshow/carousel -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="{% static 'image/banner_2.png' %}" alt="Prem1" class="d-block w-100">
+                <img src="../static/image/banner_2.png" alt="Prem1" class="d-block w-100">
             </div>
             <div class="carousel-item">
                 <img src="{% static 'image/banner_1.png' %}" alt="Prem2" class="d-block w-100">
